yaml/authapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: authapi
  name: authapi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: authapi
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-compose-servicenetwork: "true"
        io.kompose.service: authapi
    spec:
      containers:
        - env:
            - name: AuthDatabaseSettings__ConnectionString
              value: mongodb://mongo:27017
          image: authapi:1.0.0
          imagePullPolicy: Never
          name: authapi
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
