yaml/orderapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: orderapi
  name: orderapi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: orderapi
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-compose-servicenetwork: "true"
        io.kompose.service: orderapi
    spec:
      containers:
        - env:
            - name: AppSettings__InventoryServiceBaseUrl
              value: http://inventoryapi:80/api/inventory
            - name: OrderDatabaseSettings__ConnectionString
              value: mongodb://mongo:27017
            - name: RabbitMQ__HostName
              value: rabbitmq
            - name: RabbitMQ__Password
              value: guest
            - name: RabbitMQ__Port
              value: "5672"
            - name: RabbitMQ__UserName
              value: guest
            - name: RabbitMQ__VirtualHost
              value: Assignment
          image: orderapi:1.0.0
          name: orderapi
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
