yaml/orderapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: orderapi
  name: orderapi
spec:
  ports:
    - name: "5003"
      port: 5003
      targetPort: 80
  selector:
    io.kompose.service: orderapi
status:
  loadBalancer: {}
