yaml/shippingapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: shippingapi
  name: shippingapi
spec:
  ports:
    - name: "5004"
      port: 5004
      targetPort: 80
  selector:
    io.kompose.service: shippingapi
status:
  loadBalancer: {}
