yaml/authapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authapi-ingress
spec:
  rules:
  - host: authapi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authapi
            port:
              number: 5001
