yaml/orderapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orderapi-ingress
spec:
  rules:
  - host: orderapi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orderapi
            port:
              number: 5003
